account-deploy.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: account
spec:
  replicas: 1
  template:
    metadata:
      name: account
      labels:
        app: account
    spec:
      containers:
        - image: jnupeter/account:v1
          name: account-container
