account-service.yaml
apiVersion: v1
kind: Service
metadata:
    name: account
spec:
    type: NodePort
    selector:
        app: account
    ports:
    - port: 8888
      targetPort: 8080
