payment-service.yaml
apiVersion: v1
kind: Service
metadata:
    name: payment
spec:
    type: NodePort
    selector:
        app: payment
    ports:
    - port: 9999
      targetPort: 8080
