myapp-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
    name: myapp-fanout
    annotations:
        nginx.ingress.kubernetes.io/rewrite-target: /
spec:
    rules:
    - host: my.awesome.app
      http:
         paths:
         - path: /account
           backend:
               serviceName: account
               servicePort: 8888
         - path: /payment
           backend:
               serviceName: payment
               servicePort: 9999
